<resources>
    <string name="app_name">DDVRecipes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_for_a_recipe">Search for a recipe</string>
    <string name="any">Any</string>
    <string name="appetizer">Appetizer</string>
    <string name="entree">Entree</string>
    <string name="dessert">Dessert</string>
    <string name="search_by_name">Search by name</string>
    <string name="search_again">Search Again</string>
    <string name="meal_type">Meal Type:</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="by_stars">By Stars >=</string>
    <string name="fetch_ingredients">Fetch ingredients</string>
</resources>