<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RecipesFragment">

    <data>
        <variable
            name="viewModel"
            type="com.cpw253.ddvrecipes.RecipesViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="262dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/recipes"
                    app:layout_collapseMode="parallax" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/searchHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_for_a_recipe"
                    android:textSize="16sp"
                    app:layout_anchorGravity="top|center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/stars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/search_by"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/meal_type"
                    app:layout_constraintVertical_bias="0.5">

                    <TextView
                        android:id="@+id/byStars"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/by_stars"
                        android:textAlignment="center" />

                    <RadioButton
                        android:id="@+id/oneStar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/_1"
                        android:checked="true"  />

                    <RadioButton
                        android:id="@+id/twoStar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/_2" />

                    <RadioButton
                        android:id="@+id/threeStar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/_3" />

                    <RadioButton
                        android:id="@+id/fourStar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/_4" />

                    <RadioButton
                        android:id="@+id/fiveStar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/_5" />
                </RadioGroup>

                <RadioGroup
                    android:id="@+id/meal_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/stars"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/searchHeader"
                    app:layout_constraintVertical_bias="0.5">

                    <TextView
                        android:id="@+id/MealType"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/meal_type"
                        android:textAlignment="center" />

                    <RadioButton
                        android:id="@+id/radio_allMeals"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/any"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/radio_appetizer"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/appetizer" />

                    <RadioButton
                        android:id="@+id/radio_entree"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/entree" />

                    <RadioButton
                        android:id="@+id/radio_dessert"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/dessert" />
                </RadioGroup>

                <EditText
                    android:id="@+id/search_by"
                    android:layout_width="211dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="88dp"
                    android:hint="@string/search_by_name"
                    android:inputType="text"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.131"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/meal_type"
                    tools:ignore="MissingConstraints" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recipeRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="top"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/search_by" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>